[gd_scene load_steps=17 format=2]

[ext_resource path="res://resources/player/player_arms_sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/player/Player.gd" type="Script" id=2]
[ext_resource path="res://scripts/player/Camera.gd" type="Script" id=3]
[ext_resource path="res://resources/player/player_head_sheet.png" type="Texture" id=4]
[ext_resource path="res://scripts/lighting/LightSource.gd" type="Script" id=5]
[ext_resource path="res://scripts/player/PlayerStateMachine.gd" type="Script" id=6]
[ext_resource path="res://resources/player/player_body_sheet.png" type="Texture" id=7]
[ext_resource path="res://resources/player/player_legs_sheet.png" type="Texture" id=8]
[ext_resource path="res://resources/items/weapons/this_is_a_gun.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[sub_resource type="OpenSimplexNoise" id=2]

[sub_resource type="Animation" id=3]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/ArmSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/LegsSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/ItemSprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0, 0 ),
"update": 0,
"values": [ -90.0, -90.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/ItemSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0, 0 ),
"update": 0,
"values": [ Vector2( 1, -6 ), Vector2( 1, -6 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fall_impact"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/ArmSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/LegsSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/ItemSprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0, 0 ),
"update": 0,
"values": [ 90.0, 90.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/ItemSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0, 0 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 5, 5 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/ArmSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/LegsSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/ItemSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9, 1, 2 ),
"transitions": PoolRealArray( 0, 0, 0, 0 ),
"update": 0,
"values": [ Vector2( 6, 4 ), Vector2( 6, 4 ), Vector2( 6, 5 ), Vector2( 6, 5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/ItemSprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/ArmSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/LegsSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/ItemSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0, 0 ),
"update": 0,
"values": [ Vector2( 6, 5 ), Vector2( 1, -6 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/ItemSprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0, 0 ),
"update": 0,
"values": [ 90.0, -90.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 3, 4, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 3, 4, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/ArmSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 3, 4, 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/LegsSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 3, 4, 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/ItemSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0, 0 ),
"update": 0,
"values": [ Vector2( 5, 4 ), Vector2( 5, 4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/ItemSprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0 ),
"update": 0,
"values": [ 90.0 ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 22
script = ExtResource( 2 )
entity_name = "Player"

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( 0, 4 )

[node name="HeadSprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 4 )
offset = Vector2( 0, -4 )
hframes = 9
frame = 6

[node name="ItemSprite" type="Sprite" parent="Sprites"]
position = Vector2( 6, 5 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="BodySprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 7 )
offset = Vector2( 0, -4 )
hframes = 9
frame = 6

[node name="ArmSprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )
hframes = 9
frame = 6

[node name="LegsSprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 8 )
offset = Vector2( 0, -4 )
hframes = 9
frame = 6

[node name="GunPosition" type="Position2D" parent="."]
position = Vector2( 5, 12 )

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 3 )
noise = SubResource( 2 )
max_y = 60
max_r = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 3 )
anims/fall_impact = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="LightSource" type="Position2D" parent="." groups=[
"Lights",
]]
position = Vector2( 0, 4 )
script = ExtResource( 5 )
__meta__ = {
"_gizmo_extents_": 0.0
}
radius = 24

[node name="Rotate" type="Tween" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="FallingTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PlayerStateMachine" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="DebugStateMachine" type="Label" parent="."]
margin_left = -12.0
margin_top = -12.0
margin_right = 28.0
margin_bottom = 2.0
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}
